[package]
name = "qbe-parser"
description = "A parser for QBE IR"
version = "0.1.0"
authors = ["Techcable <git@techcable.net>"]
license = "Apache-2.0 OR MIT"
edition = "2024"

[dependencies]
equivalent = "1"
thiserror = "2"
num-traits = "0.2"
ordered-float = "5"
unicode-ident = "1"
paste3 = "1"
arrayvec = "0.7"

# parsing
chumsky = "0.11"

[dev-dependencies]
indoc = "2"
similar-asserts = "1"
