[package]
name = "qbe-parser"
description = "A parser for QBE IR"
version = "0.1.0"
authors = ["Techcable <git@techcable.net>"]
license = "Apache-2.0 OR MIT"
edition = "2024"
repository = "https://github.com/DuckLogic/qbe-parser.rs"
keywords = ["qbe", "ir", "parser"]
categories = [
    "parser-implementations",
    "compilers",
]

[dependencies]
equivalent = "1"
thiserror = "2"
num-traits = "0.2"
ordered-float = "5"
unicode-ident = "1"
paste3 = "1"
arrayvec = "0.7"
smol_str = "0.3"
line-index = "0.1"
text-size = "1"

# parsing
chumsky = "0.11"

[dev-dependencies]
indoc = "2"
similar-asserts = "1"

[lints.clippy]
## groups ##
cargo = { priority = -1, level = "warn" }
pedantic = { level = "warn", priority = -1 }

# restrictions
redundant_test_prefix = "warn" # name test_foo is redundant with #[test] attr

# safety
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"

## aggressively lint casts ##
# in an ideal world, overflowing casts would panic
# linting them (with deny) is the second best option
cast-possible-truncation = "deny"
cast-possible-wrap = "deny"
cast-precision-loss = "deny"
cast-sign-loss = "deny"
char-lit-as-u8 = "deny"
cast-ptr-alignment = "deny"
fn-to-numeric-cast = "deny"
fn-to-numeric-cast-any = "deny"
fn-to-numeric-cast-with-truncation = "deny"
cast-lossless = "allow" # lossless casts are fine, lints will catch if types change
ptr_as_ptr = "allow" # pointer casts are fine as long as they don't violate another rule

#
# excessively pedantic (even for clippy::pedantic)
#
too-many-lines = "allow"
# We don't put #[must_use] on len
must-use-candidate = "allow"
return-self-not-must-use = "allow"
items-after-statements = "allow"
redundant-else = "allow"
if-not-else = "allow"
missing-errors-doc = "allow"
wildcard-imports = "allow"
single-match-else = "allow"
trivially-copy-pass-by-ref = "allow"
